--- a/industrial-gateway/pom.xml
+++ b/industrial-gateway/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>iotdb-jdbc</artifactId>
       <version>0.13.0</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.plc4x</groupId>
+      <artifactId>plc4j-scraper</artifactId>
+      <version>0.9.1</version>
+   </dependency>
       
   </dependencies>
 
